welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:6: error: '(' expected but identifier found.
  if biscuit>=3 {gauche()}
     ^